Implement caching mechanism for GenServer state and optimize timeout handling.
- Introduced `CachedReadRef` and `CachingGenServer` to enable non-suspending snapshot reads of GenServer state, improving performance for read-heavy workloads.
- Updated `GenServer` timeout handling by replacing `withTimeout` with `onTimeout`, reducing overhead and simplifying error propagation.
- Added benchmarks for comparing cached reads against traditional GenServer calls, enhancing performance analysis capabilities.

Co-authored-by: Cursor <cursoragent@cursor.com>