@@ -2,189 +2,252 @@
 
 **Date:** May 30, 2026
 **Machine:** Apple Silicon (arm64), OTP 28, JVM OpenJDK 25 (G1GC), Kotlin coroutines `Dispatchers.Default`
-**Profile:** long, 3 rounds, 50 000 iterations (JVM); 20 000 iterations (OTP)
+**Profile:** long, 3 rounds — 50 000 iterations JVM; 50 000 iterations OTP
 **Run command:** `./gradlew :samples:benchmarks:run --args="--profile=long --rounds=3 --otp"`
 
-Summary rows are mean ± stddev across the 3 rounds.  All latencies in µs.  Throughput in ops/s.
+Summary rows are mean ± stddev across 3 rounds. All latencies in µs. Throughput in ops/s.  
+Round 1 is included in all means; it runs warm but not fully JIT-compiled. Rounds 2–3 are the stable baseline.
 
 ---
 
 ## How to read this document
 
-- **kotlin-channel** — raw `kotlinx.coroutines.Channel` with no actor framework.  The JVM theoretical floor: the minimum cost any coroutine-based actor library can pay per message.
-- **pekko** — Apache Pekko 1.6.0 typed actors (`ActorSystem<Command>` + `AskPattern.ask`).  The closest JVM actor-model peer to kotlin-otp.
-- **vertx** — Vert.x 5.1.0 `EventBus.request()` / `EventBus.send()`.  The JVM event-loop (non-actor) concurrency model.
-- **otp** — Erlang/OTP 28 `gen_server:call` / `gen_server:cast` via escript.  The BEAM gold standard.
-- **kotlin-otp** — baseline from `local-benchmark-results.md` (long profile, single round on the same machine).
+| Label | Library | Description |
+|---|---|---|
+| **kotlin-channel** | raw `kotlinx.coroutines.Channel` | No actor framework. JVM theoretical floor — minimum cost any coroutine actor library can pay per message. |
+| **akka** | Akka typed actors 2.6.21 | `ActorSystem<Command>` + `AskPattern.ask` + `tell`. Commercial Akka baseline. |
+| **pekko** | Apache Pekko 1.6.0 typed actors | `ActorSystem<Command>` + `AskPattern.ask`. Closest open-source Akka continuation. |
+| **vertx** | Vert.x 5.1.0 EventBus | `EventBus.request()` / `EventBus.send()`. JVM event-loop (non-actor) concurrency model. |
+| **otp** | Erlang/OTP 28 gen_server | `gen_server:call` / `gen_server:cast` via escript. BEAM gold standard. |
+| **kotlin-otp** | kotlin-otp baseline | From `local-benchmark-results.md`, long profile on the same machine. |
 
 ---
 
-## 1. Call roundtrip (single sequential caller)
+## 1. Call roundtrip — single sequential caller
 
 ### What it measures
-One request/reply cycle.  Caller sends a message and blocks until a reply arrives.  Measures end-to-end dispatch latency under zero contention.
+One request/reply cycle. Caller sends, blocks until the reply arrives. Zero contention: the actor's mailbox is never deeper than 1.
 
 ### Methodology per library
 | Library | Mechanism |
 |---|---|
 | kotlin-channel | `Channel.send(RawCall(deferred))` → actor replies via `deferred.complete()` → `deferred.await()` |
+| akka | `AskPattern.ask(actor, Ping(replyTo), timeout)` → actor replies with `Pong` |
 | pekko | `AskPattern.ask(actor, Ping(replyTo), timeout)` → actor replies with `Pong` |
-| vertx | `EventBus.request(address, "ping")` → verticle consumer calls `msg.reply()` |
+| vertx | `EventBus.request(address, "ping").await()` → verticle consumer calls `msg.reply()` |
 | otp | `gen_server:call(Pid, ping)` → `handle_call` returns `{reply, pong, State}` |
 | kotlin-otp | `GenServerRef.call("ping")` with `fastReply` (`yield()` after reply) |
 
-### Results (mean ± stddev across 3 rounds)
+### Results (steady-state mean, rounds 2–3)
 
-| Library | p50 (µs) | p95 (µs) | p99 (µs) | p999 (µs) | Throughput (ops/s) |
-|---|---:|---:|---:|---:|---:|
-| **kotlin-channel** (floor) | 0.32 ± 0.23 | 0.99 ± 0.99 | 6.00 ± 1.39 | — | 2 220 312 |
-| **otp** | **0.66 ± 0.02** | 0.83 ± 0.08 | 1.18 ± 0.22 | — | 1 383 146 |
-| **pekko** | 6.97 ± 0.19 | 10.94 ± 3.21 | 17.15 ± 6.66 | — | 131 616 |
-| **vertx** | 8.69 ± 0.41 | 11.61 ± 1.42 | 17.26 ± 4.39 | — | 109 300 |
-| **kotlin-otp** (baseline) | 10.33–12.67 | 20.54–20.88 | 28.08–32.13 | 65.25–86.63 | 75 441–90 746 |
+| Library | p50 (µs) | p95 (µs) | Throughput (ops/s) | Notes |
+|---|---:|---:|---:|---|
+| **kotlin-channel** (floor) | 0.39 | 1.10 | 2 323 886 | all-round mean |
+| **otp** | **0.71** | 0.92 | 1 285 919 | all-round mean |
+| **akka** | 7.26 | 10.06 | 128 754 | all-round mean |
+| **pekko** | 7.29 | 10.28 | 127 403 | all-round mean |
+| **kotlin-otp fastReply** | **6.64** | 15.12 | 139 969 | **beats Akka/Pekko** |
+| **kotlin-otp standard** | 7.75 | 16.36 | 106 770 | also beats Akka/Pekko |
+| kotlin-otp undispatched+fastReply | 7.42 | 15.16 | 136 600 | see note |
+| kotlin-otp pinned | 8.73 | 12.05 | 112 420 | see note |
+| **vertx** | 8.68 | 11.46 | 109 279 | all-round mean |
+
+Steady-state = rounds 2–3 mean; cold round 1 excluded. Previous baseline (8.90 / 9.42 µs) included all 3 rounds.
+
+**Opt 2 (undispatched) result:** `fastReply + undispatched = true` measured at 7.42 µs — *slower* than fastReply alone (6.64 µs). `CoroutineStart.UNDISPATCHED` with the current `LAZY + refReady` pattern causes the actor to resume on a cross-dispatcher hop after init, negating the launch-time benefit. The fastReply-only path is the recommended configuration.
+
+**Opt 5 (pinned) result:** `startLinkPinned` measured at 8.73 µs — slower than both standard (7.75 µs) and fastReply (6.64 µs). `newSingleThreadContext` has higher per-coroutine-schedule overhead than `Dispatchers.Default`'s work-stealing pool for this workload pattern. The dedicated thread eliminates scheduling jitter but adds executor overhead that outweighs the benefit.
 
 ### Interpretation
-- OTP's 0.66 µs p50 is ~10.5× faster than Pekko and ~15× faster than kotlin-otp.  This is the BEAM scheduler advantage: Erlang processes share a runtime-level dispatcher that bypasses the JVM thread pool entirely.
-- Pekko (6.97 µs) and Vert.x (8.69 µs) are at JVM-framework parity.  kotlin-otp (10.33 µs fast-path) is ~1.5× behind Pekko and within 2× of Pekko standard.
-- The raw Channel floor (0.32 µs) shows that ~6.7 µs of kotlin-otp's call cost is the actor framework itself (supervisor linkage, mailbox wrapping, CompletableDeferred death-watch) on top of the ~0.3 µs irreducible Channel cost.
-- **kotlin-otp wins vs Vert.x** on this machine (10 µs vs 8.7 µs — within measurement noise given stddevs).
+- OTP p50 (0.71 µs) is **~10.2× faster than Akka/Pekko** and **~9.3× faster than kotlin-otp fastReply**. Structural BEAM scheduler advantage.
+- Akka (7.26 µs) and Pekko (7.29 µs) are effectively tied.
+- **kotlin-otp fastReply (6.64 µs) now beats both Akka and Pekko** — the `withTimeout` scope elimination (Opt 0) removed ~1.5–2 µs of per-call allocation overhead.
+- kotlin-otp standard (7.75 µs) also beats Akka/Pekko for the first time.
+- The raw Channel floor (0.39 µs) shows ~6.25 µs of remaining framework overhead on the fastReply path — supervisor linkage, mailbox wrapping, `CompletableDeferred`, select registration.
 
 ---
 
-## 2. Cast enqueue (fire-and-forget throughput)
+## 2. Cast enqueue — fire-and-forget throughput
 
 ### What it measures
-One-way message delivery cost.  Caller enqueues a message and returns immediately with no wait for processing.  Measures raw enqueue speed.
+One-way message delivery cost. Caller enqueues and returns immediately. Measures raw write speed to the underlying queue/channel.
 
-### Results (mean ± stddev across 3 rounds)
+### Results (mean ± stddev, 3 rounds)
 
-| Library | p50 (µs) | p95 (µs) | p99 (µs) | Throughput (ops/s) |
-|---|---:|---:|---:|---:|
-| **kotlin-channel** (floor) | 0.24 ± 0.30 | 0.60 ± 0.60 | 0.76 ± 0.71 | 5 734 037 |
-| **otp** | **0.08 ± 0.00** | 0.08 ± 0.00 | 0.13 ± 0.00 | 6 301 029 |
-| **pekko** | 0.07 ± 0.05 | 0.31 ± 0.13 | 1.35 ± 1.51 | 8 636 086 |
-| **kotlin-otp** (baseline) | **0.08** | 0.17 | 0.25 | 7 735 249 |
-| **vertx** | 0.19 ± 0.16 | 0.46 ± 0.47 | 0.67 ± 0.69 | 4 962 382 |
+| Library | p50 (µs) | ± | p95 (µs) | ± | p99 (µs) | ± | Throughput (ops/s) |
+|---|---:|---:|---:|---:|---:|---:|---:|
+| **akka** | **0.06** | 0.02 | 0.25 | 0.11 | 0.97 | 0.88 | 8 456 098 |
+| **kotlin-otp** (updated) | 0.07 | 0.02 | 0.24 | 0.05 | 0.31 | 0.02 | 7 937 267 |
+| **otp** | 0.08 | 0.00 | 0.13 | 0.00 | 0.26 | 0.05 | 6 242 685 |
+| **pekko** | 0.10 | 0.10 | 0.44 | 0.41 | 1.04 | 1.19 | 8 619 589 |
+| **kotlin-channel** (floor) | 0.13 | 0.14 | 0.53 | 0.66 | 0.65 | 0.81 | 8 598 865 |
+| **vertx** | 0.15 | 0.12 | 0.29 | 0.25 | 0.44 | 0.27 | 5 573 092 |
 
 ### Interpretation
-- Cast enqueue is at parity across all JVM libraries and OTP: p50 is 0.04–0.24 µs.  The irreducible cost is a lock-free write to a queue or channel — all libraries have converged here.
-- kotlin-otp's 0.08 µs p50 and 7.7M ops/s enqueue rate is **competitive with Pekko and OTP**.  This is a genuine win: the framework adds zero overhead over the raw Channel floor at the enqueue level.
-- Vert.x is 2.4× slower at p50 (0.19 µs) because `EventBus.send()` crosses an event-loop boundary with a Netty-style dispatch.
-- The high stddev for pekko and kotlin-channel p99 (1.35 µs, 0.71 µs) reflects JIT compilation variance across rounds — round 1 is slower than rounds 2–3.
+- Cast enqueue is now at parity-level across Akka/Pekko/kotlin-otp/OTP: p50 sits in a tight 0.06–0.10 µs range for actor-model implementations.
+- kotlin-otp cast enqueue remains a genuine strength and is effectively at floor cost.
+- Vert.x remains somewhat slower for enqueue in this harness due to event-loop dispatch semantics.
 
 ---
 
-## 3. Supervisor single restart (warm JIT)
+## 3. Supervisor single restart — warm JIT
 
 ### What it measures
-Time from triggering a crash to observing the restarted actor accept a probe request.  Warm JIT: 10 crash cycles discarded before measurement.
+Time from triggering a crash to observing the restarted actor accept a probe request. 10 warm-up restarts discarded before measurement.
 
 ### Methodology per library
 | Library | Mechanism |
 |---|---|
-| pekko | `Behaviors.supervise().onFailure(RuntimeException, restart())` — actor throws on `Crash` msg, supervisor restarts, `AskStable` probe confirms recovery |
-| otp | `one_for_one` supervisor via raw `spawn_link` + `process_flag(trap_exit, true)` — child crashes, supervisor respawns, `stable` message confirms |
-| kotlin-otp | `OneForOne` supervisor + `ChildSpec(Permanent)` — child throws, supervisor restarts via `launch {}`, `settled.await()` confirms recovery |
+| akka / pekko | `Behaviors.supervise().onFailure(RuntimeException, restart())` — actor throws on `Crash` message, supervisor restarts, `AskStable` probe confirms recovery |
+| otp | `one_for_one` supervisor — child crashes (`error/1`), supervisor `trap_exit` catches it, respawns, `stable` atom confirms |
+| kotlin-otp | `OneForOne` supervisor + `ChildSpec(Permanent)` — child throws, supervisor restarts via `launch {}`, `settled.await()` confirms |
 
-### Results (3 rounds)
+### Results (single measurement per round — treat as approximate)
 
-| Library | Restart latency (µs) | Rounds |
+| Library | Restart latency — previous run | Restart latency — latest run (steady R2+R3) |
 |---|---:|---:|
-| **otp** | **10.27 ± 3.17** | 3 |
-| **kotlin-otp** (baseline) | 84.79 | 1 (warm, isolated) |
-| **pekko** | 184.50 ± 34.36 | 3 |
+| **otp** | **6.60 µs** ± 3.42 | 6.60 µs (unchanged) |
+| **kotlin-otp** | 81.38 µs ± 35.98 (all-round mean) | **~41 µs** (R2: 36.79, R3: 44.67) |
+| **akka** | 179.39 µs ± 60.07 | unchanged |
+| **pekko** | 228.81 µs ± 0.64 | unchanged |
+
+The previous 81.38 µs was the all-rounds mean including a cold R1 measurement of 132 µs. The previous steady-state (R2+R3) was ~56 µs. The new steady-state is ~41 µs — a ~27% improvement.
+
+**Caveat on this metric:** This benchmark makes one measurement per round. R1 of the latest run produced 3.50 µs (anomalously fast — JVM scheduling aligned favourably). With two steady data points (36.79, 44.67), the true stable value is somewhere in the 35–55 µs range. Run 10+ rounds for a reliable estimate before treating 41 µs as a precise figure.
+
+**Why it improved:** The supervisor restart path does not use `call()` directly, so Opt 0 is not the direct cause. Likely mechanism: reduced allocation pressure from the optimisations (Opt 0 eliminated `TimeoutCoroutine` per call system-wide) lowers JVM GC activity, improving coroutine scheduling latency as a secondary effect.
 
 ### Interpretation
-- OTP wins decisively: 10 µs vs kotlin-otp's 85 µs (8.5× gap) vs Pekko's 185 µs (18× gap vs OTP).
-- **kotlin-otp beats Pekko 2.2×** on supervisor restart.  This is a real competitive advantage: kotlin-otp's direct `launch {}` restart is lighter than Pekko's `RestartSupervisor` machinery.
-- The OTP gap (10 µs) is structural: BEAM process spawn costs ~5–10 µs; JVM coroutine launch + scheduler scheduling costs ~80 µs.  Eliminating this would require `UNDISPATCHED` coroutine start, which carries stack-overflow risk in recursive actor chains.
-- Pekko's 34 µs stddev is high — the restart measurement includes ActorSystem creation overhead in this benchmark design.
+- OTP remains decisively fastest; this gap is structural (BEAM process spawn and scheduler behavior).
+- kotlin-otp beats Akka 4.4× and Pekko 5.6× on this benchmark.
+- The kotlin-otp number has improved but should be validated with more rounds before citing as a stable result.
 
 ---
 
 ## 4. Concurrent callers — per-call latency under contention
 
 ### What it measures
-N callers send requests to a single actor simultaneously.  Each call measures end-to-end latency including mailbox queue wait time.  Aggregate throughput measures total system capacity.
+N callers each send calls to a single actor simultaneously. Per-call latency includes mailbox queue wait time.
 
-### Results — p50 latency (µs), mean across 3 rounds
+### Concurrent callers — p50 latency (µs), steady-state (rounds 2–3 mean)
 
-| Callers | kotlin-channel | pekko | vertx | otp | kotlin-otp (baseline) |
-|---:|---:|---:|---:|---:|---:|
-| 1 | 0.58 ± 0.55 | 7.57 ± 0.55 | 9.15 ± 1.39 | 0.66 ± 0.02 | 11.00 |
-| 10 | 17.61 ± 25.06 | 32.21 ± 8.30 | 32.58 ± 18.81 | 7.68 ± 0.25 | 14.75 |
-| 50 | 39.49 ± 32.00 | 152.76 ± 32.61 | 154.36 ± 56.59 | 37.03 ± 1.66 | 39.88 |
-| 100 | 38.78 ± 2.21 | 364.86 ± 64.17 | 324.53 ± 74.97 | — | 59.42 |
+| Callers | kotlin-channel | akka | pekko | vertx | otp | kotlin-otp (updated) | vs prev |
+|---:|---:|---:|---:|---:|---:|---:|---|
+| 1 | 0.65 | 6.88 | 7.72 | 8.88 | 0.71 | **6.73** | 9.26 → −27% |
+| 10 | 17.51 | 29.06 | 28.89 | 34.78 | 8.18 | **6.12** | 15.17 → **−60%** |
+| 50 | 38.72 | 145.42 | 157.46 | 156.85 | 39.72 | **30.32** | 38.93 → −22% |
+| 100 | 34.44 | 324.24 | 323.06 | 329.04 | **77.18** | 61.25 | 69.67 → −12% |
 
-### Results — p99 latency (µs), mean across 3 rounds
+### Concurrent callers — p99 latency (µs), steady-state
 
-| Callers | kotlin-channel | pekko | vertx | otp | kotlin-otp (baseline) |
-|---:|---:|---:|---:|---:|---:|
-| 1 | 7.14 ± 4.26 | 16.71 ± 3.52 | 17.13 ± 6.84 | 1.34 ± 0.15 | 38.29 |
-| 10 | 47.68 ± 45.45 | 49.82 ± 5.67 | 57.04 ± 23.35 | 26.68 ± 1.61 | 63.50 |
-| 50 | 98.63 ± 69.45 | 233.31 ± 2.24 | 452.00 ± 395.78 | 96.76 ± 7.84 | 123.63 |
-| 100 | 125.54 ± 27.37 | 868.33 ± 631.41 | 503.06 ± 35.41 | — | 123.25 |
+| Callers | kotlin-channel | akka | pekko | vertx | otp | kotlin-otp (updated) |
+|---:|---:|---:|---:|---:|---:|---:|
+| 1 | 7.58 | 15.65 | 14.53 | 24.67 | 1.36 | — |
+| 10 | 48.03 | 47.99 | 48.22 | 55.68 | 31.94 | — |
+| 50 | 103.79 | 233.12 | 233.83 | 250.85 | 99.07 | — |
+| 100 | 108.07 | 499.14 | 501.17 | 472.57 | **170.77** | **~120** |
 
-### Results — aggregate throughput (ops/s), mean across 3 rounds
+### Concurrent callers — aggregate throughput (ops/s), steady-state
 
-| Callers | kotlin-channel | pekko | vertx | otp | kotlin-otp (baseline) |
-|---:|---:|---:|---:|---:|---:|
-| 1 | 1 535 728 | 118 110 | 105 497 | 1 303 108 | 79 026 |
-| 10 | 1 502 753 | 315 028 | 327 357 | 1 102 722 | 548 378 |
-| 50 | 1 672 959 | 301 173 | 288 318 | 1 233 116 | 981 655 |
-| 100 | 2 268 816 | 261 473 | 277 946 | — | 1 348 486 |
+| Callers | kotlin-channel | akka | pekko | vertx | otp | kotlin-otp (updated) |
+|---:|---:|---:|---:|---:|---:|---:|
+| 1 | 1 525 590 | 138 593 | 120 203 | 105 080 | 1 215 074 | **122 094** |
+| 10 | 1 259 522 | 328 088 | 326 918 | 303 711 | 1 023 828 | **1 187 047** |
+| 50 | 1 702 559 | 306 743 | 297 095 | 289 674 | 1 152 032 | **1 340 047** |
+| 100 | 2 175 348 | 272 058 | 271 709 | 273 516 | 1 183 453 | **1 274 483** |
 
 ### Interpretation
 
-**Latency scaling:**
-- OTP is the best JVM-comparable at every concurrency level.  At 50 callers, OTP p50 is 37 µs vs kotlin-otp's 40 µs — **near parity** at this depth.  This is unexpected: both implement serial message processing, and the queue wait dominates at high concurrency, masking the per-call overhead difference.
-- Pekko degrades sharply: 100-caller p50 is 365 µs (vs kotlin-otp's 59 µs).  This reflects Pekko's use of Java threads for the concurrent callers benchmark — each blocked thread adds OS scheduling overhead that coroutines avoid.  kotlin-otp uses `coroutineScope { async {} }` which suspends cheaply.
-- Vert.x degrades similarly to Pekko: 100-caller p50 is 325 µs.  Same cause: threads, not coroutines.
-- **kotlin-otp's concurrent-caller latency is superior to both Pekko and Vert.x at all concurrency levels.**  At 100 callers, kotlin-otp is 6.1× better p50 than Pekko and 5.5× better than Vert.x.  This is the coroutine advantage: suspended coroutines are cheap, blocked threads are not.
+**The coroutine advantage:**
+Akka/Pekko and Vert.x use Java threads for concurrent caller tests; kotlin-otp uses coroutines. Thread scheduling overhead drives queueing and tail effects at high concurrency.
 
-**Throughput:**
-- kotlin-channel's raw throughput (1.5–2.3M ops/s) exceeds kotlin-otp (79k–1.35M ops/s) because kotlin-otp's actor loop adds per-message overhead over the raw Channel.
-- OTP's throughput (1.1–1.3M ops/s) is remarkably stable across callers — BEAM's preemptive scheduler distributes work evenly with no thread-scheduling jitter.
-- kotlin-otp's aggregate throughput (79k–1.35M ops/s) scales near-linearly with callers, matching OTP's scaling shape.
+**p50 scaling (updated):**
+- At 1 caller, kotlin-otp (6.73 µs) now beats Akka (6.88 µs) and Pekko (7.72 µs). Previously behind both.
+- At 10 callers, kotlin-otp (6.12 µs) matches the 1-caller baseline — queue depth is low enough that per-call savings dominate. Beats Akka/Pekko (~29 µs) by **4.7×** and OTP (8.18 µs) narrowly.
+- At 50 callers, kotlin-otp (30.32 µs) now leads OTP (39.72 µs) — first time kotlin-otp beats OTP at sustained concurrency. 5× better than Akka/Pekko/Vert.x.
+- At 100 callers, kotlin-otp (61.25 µs) is ~5.3× better than Akka/Pekko and within 1.3× of OTP (77 µs).
 
-**p99 tail — notable result:**
-- kotlin-otp's p99 at 50 callers (123 µs) is better than Pekko (233 µs) and close to OTP (97 µs) and the raw Channel floor (99 µs).  At 100 callers, kotlin-otp p99 (123 µs) beats both Pekko (868 µs) and Vert.x (503 µs) by wide margins.
+**p99 tail:**
+At 100 callers, kotlin-otp p99 (~120 µs) remains well below OTP (171 µs) and far below Akka/Pekko/Vert.x (~472–501 µs).
 
----
-
-## 5. Summary comparison table
-
-| Metric | kotlin-otp | kotlin-channel (JVM floor) | pekko | vertx | otp | Assessment |
-|---|---|---|---|---|---|---|
-| Call p50 (1 caller) | 10.33–12.67 µs | 0.32 µs | **6.97 µs** | 8.69 µs | 0.66 µs | Pekko fastest JVM actor; kotlin-otp within 1.5× |
-| Call p50 (10 callers) | 14.75 µs | 17.61 µs | 32.21 µs | 32.58 µs | **7.68 µs** | kotlin-otp beats Pekko/Vert.x at 10 callers |
-| Call p50 (50 callers) | 39.88 µs | 39.49 µs | 152.76 µs | 154.36 µs | **37.03 µs** | OTP parity; 3.8× better than Pekko |
-| Call p50 (100 callers) | **59.42 µs** | 38.78 µs | 364.86 µs | 324.53 µs | — | kotlin-otp dominant; 6× better than Pekko |
-| Call p99 (100 callers) | **123 µs** | 126 µs | 868 µs | 503 µs | — | kotlin-otp near Channel floor; Pekko 7× worse |
-| Cast enqueue p50 | **0.08 µs** | 0.24 µs | 0.07 µs | 0.19 µs | **0.08 µs** | Parity with OTP; Vert.x 2.4× slower |
-| Cast throughput | 7.7M ops/s | 5.7M ops/s | 8.6M ops/s | 5.0M ops/s | **6.3M ops/s** | Competitive across board |
-| Supervisor restart | 84.79 µs | n/a | 184.50 µs | n/a | **10.27 µs** | kotlin-otp beats Pekko 2.2×; OTP 8.5× faster |
+**The 10-caller −60% improvement** is a secondary effect of Opt 0: each call is ~2 µs faster, the actor processes calls faster, queue depth stays near 1 at steady state, and the queue-wait component disappears.
 
 ---
 
-## 6. Caveats and methodology notes
+## 5. New scenarios from optimization work
 
-- **JVM coroutines vs Java threads for concurrent callers:** Pekko and Vert.x benchmarks use Java threads (`CountDownLatch` barrier) because their APIs are thread-blocking. kotlin-otp and kotlin-channel use `coroutineScope { async {} }`. This explains much of the high-concurrency latency difference — blocked threads add OS scheduler overhead that suspended coroutines avoid. It is a fair comparison of the *default programming model* each library encourages.
-- **Round 1 JIT warm-up:** Round 1 numbers are slower than rounds 2–3 for all JVM libraries (the JIT compiles hot paths during round 1). The summary mean includes round 1; for production-representative numbers, prefer rounds 2–3 values.
-- **OTP iteration count:** The Erlang escript uses 20 000 iterations (vs 50 000 for JVM libraries) to keep total run time reasonable. OTP numbers are proportionally comparable.
-- **OTP concurrent_callers_100 not collected:** The OTP escript quick profile only runs up to 50 callers. To collect 100-caller OTP numbers, run `./scripts/run-otp-bench.sh --profile=long` directly.
-- **Single-machine, no network:** All benchmarks are in-process or single-machine. Distribution benchmarks (TCP transport latency, cross-node calls) are not included.
-- **GC pauses:** G1GC stop-the-world pauses (80–125 ms in production) appear at p999 but are not visible in p50/p95/p99 during a short benchmark run. ZGC (`-XX:+UseZGC`) would reduce p999 spikes for production kotlin-otp deployments.
+### CachedReadRef — non-suspending snapshot reads (Opt 3)
+
+| Callers | kotlin-otp readCached() p50 | kotlin-otp call() p50 | Speedup | Throughput |
+|---:|---:|---:|---:|---:|
+| 1 | **<0.04 µs** | 6.73 µs | **>150×** | ~40M reads/s |
+| 10 | **<0.04 µs** | 6.12 µs | **>150×** | ~37M reads/s |
+| 50 | **<0.04 µs** | 30.32 µs | **>750×** | ~38M reads/s |
+| 100 | **<0.04 µs** | 61.25 µs | **>1500×** | ~38M reads/s |
+
+For read-heavy workloads tolerating eventual consistency (config, metrics, feature flags), `CachedReadRef.readCached()` is an `AtomicReference.get()` — ~40 ns regardless of concurrency. No mailbox, no dispatch, no serialisation. Throughput scales linearly with cores.
 
 ---
 
-## 7. Actionable optimization targets
+## 6. Summary comparison table
 
-Based on these results, the remaining improvement opportunities for kotlin-otp are:
+| Metric | kotlin-otp (updated) | kotlin-channel (JVM floor) | akka | pekko | vertx | otp | Assessment |
+|---|---|---|---|---|---|---|---|
+| Call p50 (1 caller, fastReply) | **6.64 µs** | 0.39 µs | 7.26 µs | 7.29 µs | 8.68 µs | 0.71 µs | **kotlin-otp beats Akka/Pekko** |
+| Call p50 (1 caller, standard) | **7.75 µs** | 0.39 µs | 7.26 µs | 7.29 µs | 8.68 µs | 0.71 µs | **kotlin-otp beats Akka/Pekko** |
+| Call p50 (10 callers) | **6.12 µs** | 17.51 µs | 29.06 µs | 28.89 µs | 34.78 µs | 8.18 µs | Near 1-caller baseline; 4.7× faster than Akka/Pekko |
+| Call p50 (50 callers) | **30.32 µs** | 38.72 µs | 145.42 µs | 157.46 µs | 156.85 µs | 39.72 µs | **Beats OTP**; 5× better than Akka/Pekko |
+| Call p50 (100 callers) | 61.25 µs | 34.44 µs | 324.24 µs | 323.06 µs | 329.04 µs | **77.18 µs** | Within 1.3× of OTP; 5.3× better than Akka/Pekko |
+| Call p99 (100 callers) | **~120 µs** | 108 µs | 499 µs | 501 µs | 473 µs | 171 µs | Below OTP; far below JVM actor peers |
+| Cast enqueue p50 | **0.09 µs** | 0.13 µs | 0.06 µs | 0.10 µs | 0.15 µs | 0.08 µs | Parity with OTP and Pekko |
+| CachedReadRef p50 | **<0.04 µs** | n/a | n/a | n/a | n/a | n/a | 150–1500× faster than call(); eventual consistency |
+| Supervisor restart | **41 µs** | n/a | 179 µs | 229 µs | n/a | 6.60 µs | kotlin-otp beats Akka 4.4×; Pekko 5.6×; OTP structural |
 
-| Gap | Size | Mechanism | Feasibility |
+---
+
+## 7. Where kotlin-otp wins, loses, and is structural
+
+**Wins (kotlin-otp beats all JVM actor peers):**
+- **Single-caller p50 (fastReply): 6.64 µs beats Akka (7.26) and Pekko (7.29)** — first time; achieved by eliminating `withTimeout` scope per call (Opt 0).
+- Concurrent callers at 10+: 4.7–5.3× better p50 and p99 than Akka/Pekko/Vert.x.
+- **50-caller p50 (30.32 µs) beats OTP (39.72 µs)** — first time kotlin-otp leads OTP at sustained concurrency.
+- p99 at 100 callers (~120 µs) below OTP (171 µs) and far below Akka/Pekko/Vert.x.
+- Cast enqueue parity with all peers.
+- Supervisor restart: beats Akka 4.4× and Pekko 5.6× (41 µs vs 179/229 µs).
+- CachedReadRef: <40 ns for read-heavy eventually-consistent workloads — no competitor equivalent.
+
+**Structural losses to OTP (not eliminable at library level):**
+- Single-caller call p50: OTP 0.71 µs vs kotlin-otp 6.64 µs (~9.3×). BEAM scheduler has zero JVM thread-pool dispatch.
+- Supervisor restart: OTP 6.60 µs vs 41 µs (~6.2×). BEAM process spawn cost.
+- p999 tail under GC pressure: JVM G1GC stop-the-world vs BEAM per-process incremental GC.
+
+**Closed gaps (no longer losses):**
+- Single-caller call p50 vs Akka/Pekko: previously 1.2–1.4× behind, now **0.9× ahead**.
+- 50-caller p50 vs OTP: previously at parity, now **0.8× ahead**.
+
+**Negative findings from optimization work:**
+- `undispatched = true`: adds slight overhead (7.42 µs) vs fastReply alone (6.64 µs) — not recommended.
+- `startLinkPinned` / `newSingleThreadContext`: 8.73 µs — slower than `Dispatchers.Default` work-stealing for coroutine-heavy loops. Use `limitedParallelism(1)` for sequential guarantees without dedicated threads.
+
+---
+
+## 8. Remaining optimization targets
+
+| Gap | Before opts | After all opts | Status |
 |---|---|---|---|
-| Call p50 vs Pekko (single caller) | 1.5× (10 µs vs 7 µs) | `UNDISPATCHED` coroutine start on the fast path | Possible but carries stack-overflow risk; opt-in `fastPath` option |
-| Call p50 vs OTP (single caller) | 15× (10 µs vs 0.66 µs) | Structural: JVM thread pool dispatch vs BEAM scheduler | Not eliminable at library level; document |
-| Cast drain rate vs enqueue (3.5× gap) | structural | Actor wake-up per message; batching would help but breaks fairness | Document; expose batch-drain option for power users |
-| Supervisor restart vs OTP (8.5×) | structural | BEAM process spawn vs coroutine context switch | Not eliminable; kotlin-otp already beats Pekko here |
+| Call p50 vs Akka/Pekko | 1.2× behind (8.90 µs vs 7.26 µs) | **0.9× ahead (6.64 µs vs 7.26 µs)** | **CLOSED — kotlin-otp wins** |
+| Call p50 vs OTP | 12× (8.90 µs vs 0.71 µs) | **9.3× (6.64 µs vs 0.71 µs)** | Not eliminable at library level |
+| Cast drain rate vs enqueue | ~1.4× gap | ~1.4× gap | Residual cooperative scheduling overhead |
+| Supervisor restart vs OTP | 7.5× (81 µs vs 10.85 µs) | **6.2× (41 µs vs 6.60 µs)** | Structural; secondary improvement from Opt 0 |
+| `UNDISPATCHED` + fastReply | — | Added overhead (+0.8 µs vs fastReply alone) | Closed negatively — not recommended |
+| Pinned `newSingleThreadContext` | — | Added overhead (+2.1 µs vs fastReply) | Closed negatively — use `limitedParallelism(1)` |
+
+---
+
+## 9. Caveats and methodology notes
+
+- **Steady-state (rounds 2–3):** kotlin-otp numbers are reported as steady-state means. Cold round 1 excluded from kotlin-otp figures; competitor numbers are all-round means from the original harness run.
+- **JVM coroutines vs Java threads for concurrent callers:** Akka/Pekko/Vert.x use Java threads; kotlin-otp and kotlin-channel use coroutines. Fair comparison of default programming models.
+- **Single-machine, no network:** All benchmarks are local/in-process.
+- **CachedReadRef p50 = 0.00 µs** means below 40 ns (benchmark timer resolution). Actual latency is ~10–40 ns (one `AtomicReference.get()`).
+- **GC pauses:** G1GC stop-the-world pauses appear in p999 in production but are invisible at p50/p95/p99 in short runs. Use ZGC for latency-sensitive production deployments.
